--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "name": "nightmare-testing",
     "version": "0.0.1",
     "scripts": {
-        "test": "mocha"
+        "test": "mocha --reporter mochawesome"
     },
     "devDependencies": {
         "chai": "^4.1.2",
+        "mocha": "^5.2.0",
+        "mochawesome": "^3.0.2",
         "nightmare": "^3.0.1"
     }
 }
