--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
-version: 2.0
+version: 2
 jobs:
   build:
     steps:
-      - run:
-          name: install
-          command: 'npm i'
-      - run:
-          name: execute
-          command: 'npm run test'
+      - run: npm i
+  test:
+    steps:
+      - run: npm run test
