--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       # - image: circleci/node:8.10
-      - image: circleci/node:node-nightwatch
+      - image: karthikiyengar/node-nightwatch:0.0.1
       # - image: circleci/node:latest
 
     working_directory: ~/repo
